--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
         "@wordpress/interface": "^5.11.0",
         "@wordpress/server-side-render": "^4.2.0",
         "accounting": "^0.4.1",
+        "ajv": "^7.0.4",
         "axios": "^1.7.9",
         "chart.js": "^2.9.3",
         "chartjs-plugin-crosshair": "^1.1.4",
@@ -119,6 +120,7 @@
         "react-a11y-dialog": "^6.1.5",
         "react-acceptjs": "^0.3.0",
         "react-ace": "^10.1.0",
+        "react-apexcharts": "^1.4.1",
         "react-aria-components": "^1.0.0-alpha.6",
         "react-beautiful-dnd": "^13.1.1",
         "react-csv": "^2.0.1",
