chore migrate over css build scripts

--- a/package.json
+++ b/package.json
@@ -3,14 +3,10 @@
     "main": "index.js",
     "scripts": {
         "start": "npm install && npm run watch",
-        "dev": "mix && npm run dev:v3",
-        "production": "mix --production",
-        "build": "mix --production && npm run build:v3",
-        "watch": "mix watch",
+        "dev": "wp-scripts build --config wordpress-scripts-webpack.config.js",
+        "build": "wp-scripts build --config wordpress-scripts-webpack.config.js",
+        "watch": "wp-scripts start --config wordpress-scripts-webpack.config.js",
         "env": "wp-env",
-        "dev:v3": "wp-scripts build --config wordpress-scripts-webpack.config.js",
-        "watch:v3": "wp-scripts start --config wordpress-scripts-webpack.config.js",
-        "build:v3": "wp-scripts build --config wordpress-scripts-webpack.config.js",
         "packages-update": "wp-scripts packages-update",
         "plugin-zip": "wp-scripts plugin-zip"
     },
@@ -47,6 +43,7 @@
         "@wordpress/scripts": "^26.19.0",
         "autoprefixer": "^10.4.13",
         "axios-mock-adapter": "^1.18.2",
+        "copy-webpack-plugin": "^13.0.0",
         "jest": "^29.6.2",
         "laravel-mix": "^6.0.34",
         "prettier": "^2.8.3",
