--- a/.github/workflows/wordpress.yml
+++ b/.github/workflows/wordpress.yml
@@ -19,7 +19,7 @@ jobs:
     # This workflow contains a single job called "test"
     test:
         # The type of runner that the job will run on
-        runs-on: ubuntu-20.04
+        runs-on: ubuntu-latest
         strategy:
             matrix:
                 php: [ 7.2, 7.4, 8.0 ]
