chore: add svn install to unit tests workflow

--- a/.github/workflows/wordpress.yml
+++ b/.github/workflows/wordpress.yml
@@ -98,6 +98,12 @@ jobs:
             -   name: Reload Composer autoload
                 run: composer dump-autoload
 
+            -   name: Install SVN
+                run: |
+                  sudo apt-get update
+                  sudo apt-get install -y subversion
+                  svn --version
+
             -   name: Set Up Tests
                 run: bash tests/includes/bin/install.sh wordpress_test root ${{ env.mysql_pass }} 127.0.0.1:${{ env.mysql_port }} ${{ matrix.wordpress }}
 
