--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
     "main": "index.js",
     "scripts": {
         "start": "npm install && npm run watch",
-        "dev": "wp-scripts build --config webpack.config.js",
-        "build": "wp-scripts build --config webpack.config.js",
-        "watch": "wp-scripts start --config webpack.config.js",
+        "dev": "wp-scripts build",
+        "build": "wp-scripts build",
+        "watch": "wp-scripts start",
         "env": "wp-env",
         "packages-update": "wp-scripts packages-update",
         "plugin-zip": "wp-scripts plugin-zip"
@@ -38,20 +38,16 @@
         "@types/react-dom": "^18.0.11",
         "@types/wordpress__blocks": "^12.5.0",
         "@types/wordpress__components": "^23.0.1",
-        "@wordpress/dependency-extraction-webpack-plugin": "^3.3.2",
         "@wordpress/env": "^5.10.0",
         "@wordpress/scripts": "^26.19.0",
-        "autoprefixer": "^10.4.13",
-        "axios-mock-adapter": "^1.18.2",
         "copy-webpack-plugin": "^13.0.0",
         "jest": "^29.6.2",
-        "laravel-mix": "^6.0.34",
         "prettier": "^2.8.3",
-        "resolve-url-loader": "^5.0.0",
         "ts-loader": "^9.4.4",
         "typescript": "^4.9.4",
         "typescript-plugin-css-modules": "^4.1.1",
         "webpack": "^5.75.0",
+        "webpack-cli": "^6.0.1",
         "webpack-rtl-plugin": "^2.0.0",
         "wp-pot": "^1.10.2",
         "wp-textdomain": "^1.0.1"
