--- a/package.json
+++ b/package.json
@@ -41,9 +41,9 @@
         "@wordpress/env": "^5.10.0",
         "@wordpress/scripts": "^26.19.0",
         "copy-webpack-plugin": "^13.0.0",
+        "fork-ts-checker-webpack-plugin": "^9.0.2",
         "jest": "^29.6.2",
         "prettier": "^2.8.3",
-        "ts-loader": "^9.4.4",
         "typescript": "^4.9.4",
         "typescript-plugin-css-modules": "^4.1.1",
         "webpack": "^5.75.0",
