--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,6 @@
         "paypal/paypal-checkout-sdk": "^1.0",
         "kjohnson/format-object-list": "^0.1.0",
         "symfony/http-foundation": "^v5.4.46",
-        "moneyphp/money": "v3.3.1",
         "stellarwp/field-conditions": "^1.1",
         "stellarwp/validation": "^1.3",
         "symfony/polyfill-ctype": "^1.19",
@@ -20,7 +19,8 @@
         "psr/container": "1.1.1",
         "ext-json": "*",
         "stellarwp/admin-notices": "^2.0",
-        "stellarwp/arrays": "^1.3"
+        "stellarwp/arrays": "^1.3",
+        "moneyphp/money": "^3.3.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9",
