--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
         "fork-ts-checker-webpack-plugin": "^9.0.2",
         "jest": "^29.6.2",
         "prettier": "^2.8.3",
-        "typescript": "^4.9.4",
+        "typescript": "^5.8.2",
         "typescript-plugin-css-modules": "^4.1.1",
         "webpack": "^5.75.0",
         "webpack-cli": "^6.0.1",
@@ -156,7 +156,6 @@
         }
     },
     "volta": {
-        "node": "16.16.0",
-        "npm": "9.3.1"
+        "node": "18.20.7"
     }
 }
