--- a/package.json
+++ b/package.json
@@ -44,11 +44,11 @@
         "fork-ts-checker-webpack-plugin": "^9.0.2",
         "jest": "^29.6.2",
         "prettier": "^2.8.3",
+        "rtlcss-webpack-plugin": "^4.0.7",
         "typescript": "^5.8.2",
         "typescript-plugin-css-modules": "^4.1.1",
         "webpack": "^5.75.0",
         "webpack-cli": "^6.0.1",
-        "webpack-rtl-plugin": "^2.0.0",
         "wp-pot": "^1.10.2",
         "wp-textdomain": "^1.0.1"
     },
