--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,6 @@
         "moneyphp/money": "^3.3.3"
     },
     "require-dev": {
-        "fakerphp/faker": "^1.9",
         "dealerdirect/phpcodesniffer-composer-installer": "^0.7",
         "phpcompatibility/phpcompatibility-wp": "*",
         "phpcompatibility/php-compatibility": "^9.3",
@@ -33,7 +32,8 @@
         "wordpress/wordpress": "dev-trunk",
         "squizlabs/php_codesniffer": "^3.5",
         "php-stubs/wp-cli-stubs": "^2.8",
-        "yoast/phpunit-polyfills": "^4.0"
+        "yoast/phpunit-polyfills": "^4.0",
+        "fakerphp/faker": "^1.24"
     },
     "keywords": [
         "wordpress",
