--- a/.github/workflows/wordpress.yml
+++ b/.github/workflows/wordpress.yml
@@ -22,7 +22,7 @@ jobs:
         runs-on: ubuntu-latest
         strategy:
             matrix:
-                php: [7.4, 8.0, 8.1, 8.2, 8.3]
+                php: [7.4, 8.4]
                 mysql: [ 'mysql:5.7', 'mysql:8.0' ]
                 wordpress: [ '6.5', latest ]
 
