--- a/package.json
+++ b/package.json
@@ -125,6 +125,7 @@
         "react-hook-form": "^7.42.1",
         "react-input-mask": "^2.0.4",
         "react-is": "^17.0.1",
+        "react-loading-skeleton": "^3.5.0",
         "react-payment-inputs": "^1.1.7",
         "react-redux": "^8.1.2",
         "react-router": "^5.1.2",
