--- a/package.json
+++ b/package.json
@@ -112,7 +112,7 @@
         "react-acceptjs": "^0.3.0",
         "react-ace": "^10.1.0",
         "react-apexcharts": "^1.4.1",
-        "react-aria-components": "^1.0.0-alpha.6",
+        "react-aria-components": "^1.7.1",
         "react-beautiful-dnd": "^13.1.1",
         "react-csv": "^2.0.1",
         "react-currency-input-field": "^3.6.10",
