refactor: add alias to tsconfig & update

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -52,6 +52,9 @@
             ],
             "@givewp/campaigns/*": [
                 "./src/Campaigns/resources/*"
+            ],
+            "@givewp/src/*": [
+                "./src/*"
             ]
         }
     },
