fix: set missing path to tsconfig and add missing types

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -53,6 +53,9 @@
             "@givewp/campaigns/*": [
                 "./src/Campaigns/resources/*"
             ],
+            "@givewp/donors/*": [
+                "./src/Donors/resources/*"
+            ],
             "@givewp/src/*": [
                 "./src/*"
             ]
