feature: include jsx-flag

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,9 +1,14 @@
 {
     "compilerOptions": {
+        "jsx": "react",
         "baseUrl": ".",
         "paths": {
-            "@givewp/components": ["./src/Views/Components/index.js"],
-            "@givewp/promotions/*": ["./src/Promotions/sharedResources/*"]
+            "@givewp/components": [
+                "./src/Views/Components/index.js"
+            ],
+            "@givewp/promotions/*": [
+                "./src/Promotions/sharedResources/*"
+            ]
         }
     }
 }
