feature: add scaffold with header and tabs for donation details page

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -56,6 +56,9 @@
             "@givewp/donors/*": [
                 "./src/Donors/resources/*"
             ],
+            "@givewp/donations/*": [
+                "./src/Donations/resources/*"
+            ],
             "@givewp/src/*": [
                 "./src/*"
             ]
