--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "kjohnson/format-object-list": "^0.1.0",
         "symfony/http-foundation": "^v5.4.46",
         "stellarwp/field-conditions": "^1.1",
-        "stellarwp/validation": "^1.3",
+        "stellarwp/validation": "1.5.0",
         "symfony/polyfill-ctype": "^1.19",
         "symfony/polyfill-mbstring": "^1.19",
         "woocommerce/action-scheduler": "^3.6",
