refactor: replace useDonationAmounts and fix event tickets not recording amounts correctly

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -59,6 +59,9 @@
             "@givewp/donations/*": [
                 "./src/Donations/resources/*"
             ],
+            "@givewp/admin/*": [
+                "./src/Admin/*"
+            ],
             "@givewp/src/*": [
                 "./src/*"
             ]
