--- a/tsconfig.json
+++ b/tsconfig.json
@@ -56,6 +56,15 @@
             "@givewp/donors/*": [
                 "./src/Donors/resources/*"
             ],
+            "@givewp/donations/*": [
+                "./src/Donations/resources/*"
+            ],
+            "@givewp/subscriptions/*": [
+                "./src/Subscriptions/resources/*"
+            ],
+            "@givewp/admin/*": [
+                "./src/Admin/*"
+            ],
             "@givewp/src/*": [
                 "./src/*"
             ]
