feature: add frontend scaffold for Subscription Details page

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -59,6 +59,9 @@
             "@givewp/donations/*": [
                 "./src/Donations/resources/*"
             ],
+            "@givewp/subscriptions/*": [
+                "./src/Subscriptions/resources/*"
+            ],
             "@givewp/admin/*": [
                 "./src/Admin/*"
             ],
