--- a/phpstan.neon
+++ b/phpstan.neon
@@ -27,6 +27,7 @@ parameters:
             - src/Framework/PaymentGateways/ # Known use of unsafe static
             - src/PaymentGateways/Actions/CreateSubscriptionAction/ # phpstan isn't finding inherited constructor for LegacySubscriber
             - src/TestData/ # Non-production code.
+            - src/ThirdPartySupport/Elementor/ # Elementor\Widget_Base dependency not available during analysis
             - src/Tracking/Events/ThemeTracking.php # Unsure how undefined property $trackId is supposed to be declared or used.
 
 services:
