feature: refresh list table after adding a renewal

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
         "baseUrl": ".",
         "paths": {
             "@givewp/components": [
-                "./src/Views/Components/index.js"
+                "src/Views/Components/index.ts"
             ],
             "@givewp/components/*": [
                 "./src/Views/Components/*"
