fix: add ajv draft 04 support

--- a/package.json
+++ b/package.json
@@ -82,7 +82,8 @@
         "@wordpress/interface": "^5.11.0",
         "@wordpress/server-side-render": "^4.2.0",
         "accounting": "^0.4.1",
-        "ajv": "^7.0.4",
+        "ajv": "^8.17.1",
+        "ajv-draft-04": "^1.0.0",
         "axios": "^1.7.9",
         "chart.js": "^2.9.3",
         "chartjs-plugin-crosshair": "^1.1.4",
