--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
         "squizlabs/php_codesniffer": "^3.5",
         "php-stubs/wp-cli-stubs": "^2.8",
         "yoast/phpunit-polyfills": "^4.0",
-        "fakerphp/faker": "^1.24"
+        "fakerphp/faker": "^1.24",
+        "phpstan/phpstan": "^2.1"
     },
     "keywords": [
         "wordpress",
