--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,13 +1,9 @@
-includes:
-    - vendor/timeweb/phpstan-enum/extension.neon
-    - vendor/szepeviktor/phpstan-wordpress/extension.neon
-
 parameters:
     level: 0
     paths:
         - src/
     bootstrapFiles:
-        - give.php
+        - .phpstan/bootstrap.php
     scanDirectories:
         - includes/
         - vendor/vendor-prefixed/
@@ -25,7 +21,7 @@ parameters:
             - src/Framework/FieldsAPI/Concerns/HasType.php # Trait assumes class constant TYPE, which is defined on each Node class.
             - src/Framework/Migrations/ # Give\Framework\Migrations\Actions has use of undefined constant MigrationsRunner::MIGRATION_OPTION
             - src/Framework/PaymentGateways/ # Known use of unsafe static
-            - src/PaymentGateways/Actions/CreateSubscriptionAction/ # phpstan isn't finding inherited constructor for LegacySubscriber
+            - src/PaymentGateways/Actions/CreateSubscriptionAction (?) # phpstan isn't finding inherited constructor for LegacySubscriber
             - src/TestData/ # Non-production code.
             - src/ThirdPartySupport/Elementor/ # Elementor\Widget_Base dependency not available during analysis
             - src/Tracking/Events/ThemeTracking.php # Unsure how undefined property $trackId is supposed to be declared or used.
