--- a/composer.json
+++ b/composer.json
@@ -34,8 +34,11 @@
         "php-stubs/wp-cli-stubs": "^2.8",
         "yoast/phpunit-polyfills": "^4.0",
         "fakerphp/faker": "^1.24",
-        "phpstan/phpstan": "^2.1",
-        "szepeviktor/phpstan-wordpress": "^2.0"
+        "phpstan/phpstan": "^1.11",
+        "szepeviktor/phpstan-wordpress": "^1.3",
+        "php-stubs/wordpress-stubs": "^6.6",
+        "php-stubs/woocommerce-stubs": "^9.5",
+        "phpstan/extension-installer": "^1.4"
     },
     "keywords": [
         "wordpress",
@@ -87,7 +90,8 @@
         },
         "allow-plugins": {
             "dealerdirect/phpcodesniffer-composer-installer": true,
-            "composer/installers": true
+            "composer/installers": true,
+            "phpstan/extension-installer": true
         }
     },
     "extra": {
