--- a/phpstan.neon
+++ b/phpstan.neon
@@ -36,5 +36,7 @@ services:
     class: Give\PHPStan\Query\Rules\RequireLimitBeforeFetchingRule
     arguments:
       enforceLimitForGet: false
+    excludedDirectories:
+        - %currentWorkingDirectory%/wp-content/plugins/give/src/Framework/Models/Model.php
     tags:
       - phpstan.rules.rule
